# counter-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: counter_bench.rs
src/: impls.rs  lib.rs  unit_tests.rs
src/impls/: add.rs  add_iterable.rs  add_self.rs  create.rs  deref.rs  extend.rs  from_iterator.rs  index.rs  intersection.rs  into_iter.rs  into_iterator.rs  serialize.rs  sub.rs  sub_iterable.rs  sub_self.rs  union.rs
tests/: tests.rs
