[package]
name = "counter"
version = "0.5.7"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
description = "Simple package to count generic iterables"
repository = "https://github.com/coriolinus/counter-rs"
documentation = "https://docs.rs/counter"
readme = "README.md"
keywords = ["count", "multiset", "bag", "counter"]
license = "MIT"
edition = "2021"

[dependencies]
num-traits = "0.2"

[dev-dependencies]
maplit = "1.0"
rand = "0.8.5"

