[package]
name = "counter"
version = "0.5.7"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
description = "Simple package to count generic iterables"
repository = "https://github.com/coriolinus/counter-rs"
documentation = "https://docs.rs/counter"
readme = "README.md"
keywords = ["count", "multiset", "bag", "counter"]
license = "MIT"
edition = "2021"

[features]
ahash = ["dep:ahash"]

[dependencies]
ahash = {version = "0.8.3", optional = true}
num-traits = "0.2"
serde = { version = "1.0.188", optional = true}

[dev-dependencies]
maplit = "1.0"
rand = "0.8.5"
serde_json = "1.0.107"
